# rtlmod

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-02-23-rtlmod-design.md  2026-02-23-rtlmod-implementation.md
rtlmod/: __init__.py  array.py  ops.py  pipeline.py  types.py
rtlmod/io/: __init__.py  trace.py  vcd.py
tests/: test_arithmetic.py  test_array.py  test_integration.py  test_mem.py  test_ops.py  test_pipeline.py  test_resize_display.py  test_trace.py  test_types.py  test_vcd.py
tests/fixtures/: simple.vcd
