[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rtlmod"
version = "0.1.0"
description = "Numpy-like arbitrary-width integer types for Python RTL modeling"
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["pytest"]
